# template

template/cpp/: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  build.cmake  test.cmake
template/cpp/cmake/: build_directory.cmake  compile_option.cmake  config.cmake  ndef_value.cmake  processor_num.cmake  version.h.in
template/cpp/src/: CMakeLists.txt  Main.cpp
template/cpp/test/: AddTestHelpers.cmake  CMakeLists.txt  TestSource.cpp
template/js/: index.html
